# utils

./: .gitignore  README.md  U盘杀毒  nook上的Epub中文css修改.pl  perl模块Epub电子书生成.pl  为openSUSE的tty们设置背景  亮度调节  修改隐私文件的权限  共享指定目录  声音调节  备份系统.sh  按照文件后缀归类文件到系统对应目录  根据拼音查询五笔  根据汉字查询五笔  检查邮件.bash  添加ISO文件路径到APT源  清除tex临时文件  清除火狐缓存.bash  生成模块  设置壁纸
blog/vps自动备份工具/: README
emacs-utils/: README  emacs-in-appdata
glodon/sql-parser/: design
linux/: remove_gnome  把fstab中的分区标识改为uuid.pl
ruby/: READMR
sinatag/: .anjuta_sym_db.db  Makefile.am  configure.ac
sinatag/.anjuta/session/: anjuta.session  dock-layout.xml
sinatag/src/: Makefile.am
webos/others/: README
webos/others/蜡笔同步/applications/com.labi.app/: appinfo.json  config.js  depends.js  index.html  init.js  lang.js  privacy.html  tos.html
开机时间/: README  design  gnome-sound-applet.desktop  install  start_time_count.bash  start_time_output.bash  开机时间.bash
新浪微博标签推荐/: .gitignore  index.html  sync
新浪微博标签推荐/cgi-bin/: callback  index.pl  login.pl  oauth2.pl  split_keywords.pl
新浪微博标签推荐/css/: base.css
新浪微博标签推荐/gtk/src/: main.c  sinatag.ui
新浪微博标签推荐/js/: example.js  main.js
新浪微博标签推荐/scripts/: compute_tag.pl  获得微博.pl
新浪微博标签推荐/server/: desgin
新浪微博标签推荐/server/css/: base.css
电子书/: epub电子书css转换.bash
电源/: README  sys_mode_change  亮度  休眠  睡眠
音乐/: 删除多余歌词文件.pl
魔兽争霸修改分辨率/: .gitignore
魔兽争霸修改分辨率/Src/: .gitignore  MainFrm.dfm  MainFrm.pas  Project1.cfg  Project1.identcache  War3Video.bdsproj  War3Video.bdsproj.local  War3Video.dpr  War3Video.identcache  War3Video.res
(+54 files in other folders)
